# magiskboot_build

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.android.txt  CMakeLists.compat.txt  CMakeLists.lib.txt  CMakeLists.magisk.txt  CMakeLists.magiskboot.txt  CMakeLists.patch.txt  CMakeLists.rust.txt  CMakeLists.stub.txt  CMakeLists.txt  Makefile  README.md  flags.h.in  fortify.h
.github/: __apply_patches.sh  __debug_release_template.md  __release_template.md  __release_template.txt
.github/ISSUE_TEMPLATE/: bug_report.md  question-or-suggestion.md
.github/workflows/: ci.yaml  deploy.yaml  release.yaml
cmake/: FindLIBFDT.cmake
include/: android_macro.h  fortify.h  libbsd_compat.h  sendfile_compat.h
include-android/: fortify_stub.h  libbsd_stub.h
include/emsup/: mkdev_stubs.h
include/winsup/: acl_compat.h  at_compat.h  dirent_compat.h  file_compat.h  io_compat.h  libbsd_compat.h  link_compat.h  mkdir_compat.h  mknod_compat.h  stat_compat.h  str_compat.h  symlink_compat.h  uio_compat.h  variants_compat.h  xattr_compat.h
libc-compat/emsup/: mmap_hack.c
libc-compat/include/libbsd/: str_compat.h
libc-compat/include/winsup/: open_compat.h  stat_compat.h
libc-compat/non-linux/: sendfile_fallback.c
libc-compat/rs/: lib.rs
libc-compat/rs/common/: mod.rs
libc-compat/rs/cygwin/: stubs.rs
libc-compat/rs/darwin/: defs.rs  mod.rs  stubs.rs
libc-compat/rs/emscripten/: defs.rs  mod.rs  stubs.rs
libc-compat/rs/linux/: stubs.rs
libc-compat/rs/windows/: stubs.rs
libc-compat/winsup/: acl.c  at.c  dirent.c  file.c  link.c  mkdir.c  mknod_stub.c  open.c  stat.c
libc-compat/winsup/internal/: acl.c  acl.h  assert.c  assert.h  errno.c  fd.c  fs.c
libc-compat/winsup/rs/: Cargo.toml  lib.rs
patches-contrib/Magisk/: 0021-workaround-revert-extract_if-to-drain_filter-rename.patch  0026-workaround-boot-explicitly-state-using-cstr_from_bytes_until_nu.patch  0029-workaround-support-building-with-libstdcxx.patch  0030-base-disable-parse_mount_info.patch
patches/Magisk/: 0001-native-base-rust-add-errno_location-for-Linux.patch  0001-native-base-rust-add-errno_location-other-platforms.patch  0001-native-fix-header-includes.patch  0002-fix-builds-for-some-OS.patch  0002-native-base-disable-Android-compatibility-stuffs-on-.patch  0002-native-base-disable-missing-hpp.patch  0003-base-files-disable-BLKGETSIZE-for-non-Linux.patch  0003-native-fix-header-include-for-Linux.patch  0003-native-fix-header-includes.patch  0004-disable-funcs-not-used-by-magiskboot.patch  0004-native-base-stream-replace-fpos_t-with-off_t-on-Linu.patch  0005-base-rust-add-fd_path-impl-for-other-OS.patch  0005-native-boot-cpio-handle-dirname-prototype-difference.patch  0006-disable-libc-funcs-not-used-by-magiskboot.patch  0006-native-update-Cargo-config.patch  0007-base-impl-sendfile-using-read-write-for-non-Linux-pl.patch  0008-base-files-add-BLKGETSIZE-for-macOS.patch  0008-base-files-add-BLKGETSIZE-impl-for-other-OS.patch  0008-base-impl-sendfile-using-read-write-for-non-Linux-pl.patch  0008-fix-build-err-on-MinGW.patch  0009-base-misc-add-partial-pdeathsig-impl-for-non-Linux-p.patch  0009-disable-fork_no_orphan-on-non-Linux-platforms.patch  0009-drop-rust-funcs-unused-by-magiskboot.patch  0010-base-misc-add-pr_setname-impl-for-macOS.patch  0010-base-misc-add-pr_setname-impl-for-other-OS.patch  0010-workaround-UTF-8-issues-on-Windows.patch  0011-base-files-disable-selinux-context-stuffs.patch  0011-base-selinux-stub-setcon-on-non-Linux-platforms.patch  0012-base-selinux-add-get-set-f-l-xattr-impl-for-macOS.patch  0012-base-selinux-add-get-set-f-l-xattr-impl-for-other-OS.patch  0013-base-rust-stub-O_PATH-on-non-Linux-platform.patch  0014-base-rust-add-fd_path-impl-for-other-OS.patch  0014-base-rust-add-macOS-fd_path-impl.patch  0014-base-rust-find-proc-fds-from-dev-fd-on-macOS.patch  0015-base-xwrap-disable-dup3-on-non-Linux.patch  0016-base-xwrap-rust-alias-lseek-to-lseek64-on-non-Linux-.patch  0017-base-disable-pipe2-on-non-Linux-systems.patch  0018-base-rust-xwrap-disable-more-function-on-non-Linux.patch  0019-HACK-support-cfg-attribute-in-build-script.patch  0020-fix-MetadataExt-import-on-other-OS.patch  (+15 more)
patches/android_libbase/: 0005-fix-unique_fd.h-for-Termux.patch  0007-fix-properties-for-Termux.patch  0008-fix-header-include-for-Cygwin.patch  0008-fix-header-include-for-non-Linux.patch  0009-file-stub-GetExecutablePath-for-non-Linux.patch  0009-fix-cmsg_space-to-msg_controllen-static_cast-on-Cygw.patch  0010-Cygwin-find-executable-path-like-on-Linux.patch  0011-mingw-use-fstat-stub-from-winsup.patch  0012-file-stub-GetExecutablePath-for-Emscripten.patch
patches/android_logging/: 0003-fix-__INTRODUCED_IN-attributes-for-Termux.patch  0005-disable-logd-and-pmsg-on-Android.patch  0006-Cygwin-has-getprogname.patch  0007-liblog-logger-don-t-use-std-namespace-on-Windows.patch
patches/corrosion/: 0001-support-pc-windows-gnullvm-targets.patch  0002-suppress-rustup-target-not-installed-error.patch  0003-allow-adding-required-cargo-rust-flags-when-detectin.patch
patches/cxx-rs/: 0001-Do-not-link-against-cxxbridge1.patch  0002-Remove-usage-of-std-cerr-and-exceptions.patch
patches/mman-win32/: 0001-set-winerr-via-winsup.patch  0002-implement-MAP_PRIVATE-using-copy-on-write-protection.patch
patches/msvc_getline/: 0001-adapt-to-MinGW.patch  0002-support-cpp.patch
scripts/: apply_patches.py  clone_submodules.sh  magiskboot_test.sh
src/: libbsd_compat.c  magiskbase-rs-wrapper.cc  magiskboot-rs-wrapper.cc  sendfile_compat.c
src/libc-compat-rs/: Cargo.toml  lib.rs  macros.rs
src/libc-compat-rs/cygwin/: defs.rs  mod.rs  stubs.rs
src/web-shims/: conio_hack.cc  impl.in.js  impl.pre.js  script.in.js  script.js.in  shell.html.in  shell.in.html  shfile.in.html  utils.lib.js
src/winsup/: acl_compat.c  at_compat.c  dirent_compat.c  file_compat.c  io_compat.c  libbsd_compat.c  link_compat.c  mkdir_compat.c  mknod_compat.c  open_compat.c  stat_compat.c  str_compat.c  symlink_compat.c  uio_compat.c  variants_compat.c  xattr_compat.c
src/winsup-rs/: Cargo.toml  cvt.rs  fd.rs  fs.rs
(+67 files in other folders)
